Bug 145511 - FILESAVE to PPTX as read-only with additional password protection for editing not working
Summary: FILESAVE to PPTX as read-only with additional password protection for editing...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.3.0
Keywords: filter:odp
Depends on:
Blocks: PPTX Password-Protected
  Show dependency treegraph
 
Reported: 2021-11-02 14:20 UTC by NISZ LibreOffice Team
Modified: 2025-01-23 03:04 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Impress where asks for editing password (10.82 KB, application/vnd.oasis.opendocument.presentation)
2021-11-02 14:22 UTC, NISZ LibreOffice Team
Details
Exported file from Impress (23.22 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2021-11-02 14:23 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-11-02 14:20:20 UTC
Description:
If there is an editing password on a PPTX which is exported from Impress it doesn’t work

Steps to Reproduce:
1.Create a document in Impress
2.Save to PPTX, select the option to password protect and add the option to make this read-only with an additional password for editing.
3.Enter and confirm your passwords and save the file
4. Reopen the file, and you will see that file opens read-only.

Actual Results:
Edit mode in both LO and MSO can be set without password.

Expected Results:
Edit mode should ask for password


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: c2de581d1943df2d84f2b71817b6a8bee41f0217
CPU threads: 8; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL
Comment 1 NISZ LibreOffice Team 2021-11-02 14:22:26 UTC
Created attachment 176080 [details]
Example file from Impress where asks for editing password
Comment 2 NISZ LibreOffice Team 2021-11-02 14:23:21 UTC
Created attachment 176081 [details]
Exported file from Impress
Comment 3 Xisco Faulí 2021-11-02 14:51:11 UTC
oh, I found this issue the other day when I wrote https://cgit.freedesktop.org/libreoffice/core/commit/?id=1d09e7da3047579b394897aec4b48d8af444b05b. I had in mind to report it but you were faster ;-)
Comment 4 Commit Notification 2021-11-24 08:20:04 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/04e279007272de286be31152d01e9cb45c9bd3e3

tdf#145511 PPTX: export the password for editing

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 NISZ LibreOffice Team 2021-12-02 08:46:04 UTC
Verified in:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 4ac9032163cf55c160145373e7c41741c9c339ca
CPU threads: 8; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL