tdf#145511 PPTX: export the password for editing

The password for editing wasn't exported in PPTX
documents.

Test: Edit->Edit Mode doesn't change to edit mode
any more without asking the password for editing.

Follow-up to commit 5697e09b3e726a38b58ce31ac0c3a97e7871c74a
"tdf#144943 PPTX import: fix permission for editing".

Change-Id: I1a9de511cf8b79224d8ac0a9aa0bf860b87bf184
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/124651
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>