sd/qa/uitest/impress_tests/save_readonly_with_password.py
@@ -13,6 +13,53 @@ import os.path
 
 class save_readonly_with_password(UITestCase):
 
+    #Bug 145511 - FILESAVE to PPTX as read-only with additional password protection for editing not working
+   def test_save_to_pptx(self):
+
+        with TemporaryDirectory() as tempdir:
+            xFilePath = os.path.join(tempdir, "tdf144374-tmp.pptx")
+
+            with self.ui_test.create_doc_in_start_center("impress"):
+                xTemplateDlg = self.xUITest.getTopFocusWindow()
+                xCancelBtn = xTemplateDlg.getChild("close")
+                self.ui_test.close_dialog_through_button(xCancelBtn)
+
+                # Save the document
+                with self.ui_test.execute_dialog_through_command(".uno:Save", close_button="") as xSaveDialog:
+                    xFileName = xSaveDialog.getChild("file_name")
+                    xFileName.executeAction("TYPE", mkPropertyValues({"KEYCODE":"CTRL+A"}))
+                    xFileName.executeAction("TYPE", mkPropertyValues({"KEYCODE":"BACKSPACE"}))
+                    xFileName.executeAction("TYPE", mkPropertyValues({"TEXT": xFilePath}))
+                    xFileTypeCombo = xSaveDialog.getChild("file_type")
+                    select_by_text(xFileTypeCombo, "Office Open XML Presentation (.pptx)")
+                    xPasswordCheckButton = xSaveDialog.getChild("password")
+                    xPasswordCheckButton.executeAction("CLICK", tuple())
+                    xOpen = xSaveDialog.getChild("open")
+
+                    with self.ui_test.execute_dialog_through_action(xOpen, "CLICK") as xPasswordDialog:
+                        xReadonly = xPasswordDialog.getChild("readonly")
+                        xReadonly.executeAction("CLICK", tuple())
+                        xNewPassword = xPasswordDialog.getChild("newpassroEntry")
+                        xNewPassword.executeAction("TYPE", mkPropertyValues({"TEXT": "password"}))
+                        xConfirmPassword = xPasswordDialog.getChild("confirmropassEntry")
+                        xConfirmPassword.executeAction("TYPE", mkPropertyValues({"TEXT": "password"}))
+
+                # PPTX confirmation dialog is displayed
+                xWarnDialog = self.xUITest.getTopFocusWindow()
+                xSave = xWarnDialog.getChild("save")
+                self.ui_test.close_dialog_through_button(xSave)
+
+            with self.ui_test.load_file(systemPathToFileUrl(xFilePath)) as document:
+
+                self.assertTrue(document.isReadonly())
+
+                # Without the fix in place, this dialog wouldn't have been displayed
+                with self.ui_test.execute_dialog_through_command(".uno:EditDoc") as xDialog:
+                    xPassword = xDialog.getChild("newpassEntry")
+                    xPassword.executeAction("TYPE", mkPropertyValues({"TEXT": "password"}))
+
+                self.assertFalse(document.isReadonly())
+
    def test_save_to_odp(self):
 
         with TemporaryDirectory() as tempdir:
